--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <img class="img-size" :src="getAvatarImg(singoloContatto)" alt="">
                             <div class="box-friend-name-info">
                                 <h5>{{singoloContatto.name}}</h5>
-                                <h6>Ultimo messaggio inviato alle</h6>
+                                <h6>Ultimo messaggio inviato {{}}</h6>
                             </div>
                         </div>
 
